src/components/hero/hero.css
.heroPage {
  z-index: 100000000;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 50px;
  align-items: flex-start;
  justify-content: center;
  height: calc(100vh - 154px);
  color: white;
  gap: 100px;
}

.heroLeft {
  margin-top: 200px;
  display: flex;
  flex-direction: column;
  flex: 3;
  z-index: 100000;
}

.heroHeading {
  font-size: 40px;
  font-weight: 700;
}

.heroIntro {
  margin-top: 10px;
}

.heroRight {
  display: flex;
  flex: 3;
  align-items: flex-end;
  flex-direction: column;
  height: fit-content;
  overflow: hidden;
  z-index: 100000;
}

.heroCenter {
  height: 100%;
  flex: 1;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  z-index: 100000;
}

.location {
  display: flex;
  align-items: center;
  justify-content: center;
}

.centerText {
  margin-left: -10px;
  padding-left: 0px;
}




@media screen and (max-width: 768px) {
  .heroPage {
    padding:16px;
    flex-direction: column;
    gap: 10px;
  }

  

  .heroLeft {
    margin-top: 250px;
    flex: 1;
  }

  .heroRight {
    
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }
}

